--- a/whisper/config.yaml
+++ b/whisper/config.yaml
@@ -34,4 +34,4 @@ schema:
 ports:
   "10300/tcp": null
 homeassistant: 2023.8.0.dev20230728
-image: homeassistant/{arch}-addon-whisper
+#image: homeassistant/{arch}-addon-whisper
